fix: corrected an issue where editor component height would be greater than current screen height
The editor component would cause a scrollbar due to not having a proper height limit based on
current screen height. I found out that it had 100dvh which caused a leak/scrollbar. So after
deleting that and adding a display: flex + flex: 1 settings it now fits perftly inside the current
screen height. The only scrollbar at the moment is inside the textarea which is currently
acceptable.

--- a/src/components/editor/Editor.module.css
+++ b/src/components/editor/Editor.module.css
@@ -1,5 +1,8 @@
 
 .wrapper {
+    display: flex;
+    flex-direction: column;
+    
     > header {
         display: flex;
         align-items: center;
@@ -13,10 +16,13 @@
     }
 
     > main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
 
         > textarea {
+            flex: 1;
             width: 100%;
-            height: 100dvh;
             padding: 1rem;
             border-style: none;
             color: var(--color-700);
